# packageurl.rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml  conformance.yml  pages.yaml  publish.yml
benches/: bench.rs
scripts/: purl-spec-tests.sha256  update-purl-spec-tests.sh
src/: errors.rs  lib.rs  parser.rs  purl.rs  types.rs
src/utils/: encodable.rs  mod.rs
tests/: lib.rs  purl_conformance.rs
tests/spec/: macros.rs  mod.rs  testcase.rs
web/: Cargo.toml  index.html
web/app/: Cargo.toml
web/app/src/: lib.rs
web/server/: Cargo.toml
web/server/src/: main.rs
web/src/: main.rs
web/style/: main.css
