[package]
name = "packageurl"
version = "0.6.0-rc.2"
edition = "2021"
authors = [
    "Martin Larralde <martin.larralde@embl.de>",
    "Jens Reimann <ctron@dentrassi.de>",
]
license = "MIT"
description = "Rust implementation of the package url specification"
documentation = "https://docs.rs/packageurl"
repository = "https://github.com/scm-rs/packageurl.rs"
readme = "README.md"
keywords = ["purl", "package-url"]
categories = ["parser-implementations", "encoding", "development-tools"]
rust-version = "1.83.0"

[dependencies]
percent-encoding = "2"
thiserror = "2"

memchr = { version = "2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []

[dev-dependencies]
criterion = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[[bench]]
name = "bench"
harness = false
