[workspace]
members = [".", "web/app", "web/server"]
default-members = ["."]

[[workspace.metadata.leptos]]
name = "packageurl-web"
bin-package = "packageurl-web-server"
lib-package = "packageurl-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "web/style/main.css"
assets-dir = "web/public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

[package]
name = "packageurl"
version = "0.7.0"
edition = "2024"
authors = [
    "Martin Larralde <martin.larralde@embl.de>",
    "Jens Reimann <ctron@dentrassi.de>",
]
license = "MIT"
description = "Rust implementation of the package url specification"
documentation = "https://docs.rs/packageurl"
repository = "https://github.com/scm-rs/packageurl.rs"
readme = "README.md"
keywords = ["purl", "package-url"]
categories = ["parser-implementations", "encoding", "development-tools"]
rust-version = "1.85.0"

# The purl-spec conformance suite vendored under tests/purl-spec is test-only;
# keep it out of the published crate.
exclude = ["/tests/purl-spec/"]

[dependencies]
percent-encoding = "2"
thiserror = "2"

memchr = { version = "2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []

[dev-dependencies]
criterion = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[[bench]]
name = "bench"
harness = false
