[package]
name = "packageurl-web"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
packageurl = { path = ".." }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "History", "Navigator", "UrlSearchParams"]
