[package]
name = "packageurl-web"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
packageurl = { path = ".." }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "History", "Navigator", "UrlSearchParams"]
